cilium_policies_backup.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-iperf3","namespace":"boutique"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"run":"iperf3-client"}}}],"ports":[{"port":5201,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"iperf3-server"}}}}
    creationTimestamp: "2026-05-02T08:36:39Z"
    generation: 1
    name: allow-iperf3
    namespace: boutique
    resourceVersion: "519072"
    uid: 85d8c4ef-1bdd-4c48-a462-628345e98574
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            run: iperf3-client
      ports:
      - port: 5201
        protocol: TCP
    podSelector:
      matchLabels:
        app: iperf3-server
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
